Kubernetes/bootstrap/crowdsec/web-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crowdsec-web-ui
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: crowdsec-web-ui
