Kubernetes/bootstrap/crowdsec/web-ui/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: crowdsec-web-ui
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bans.nerine.dev`)
      kind: Rule
      services:
        - name: crowdsec-web-ui
          port: 3000
      middlewares:
        - name: public-chain
          namespace: traefik
        - name: authentik
          namespace: traefik
  tls:
    certResolver: letsencrypt
    domains:
      - main: nerine.dev
        sans:
          - "*.nerine.dev"
